--- a/module-1/lab-map-reduce-filter/your-code/main.ipynb
+++ b/module-1/lab-map-reduce-filter/your-code/main.ipynb
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -831,21 +831,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['PROPHET  |Almustafa,', 'the ', 'chosen', 'and', 'the beloved,', 'who', 'was', 'a', 'dawn', 'unto', 'his', 'own day,', 'had', 'waited', 'twelve', 'years', 'in', 'the', 'city of', 'Orphalese']\n"
+      "['prophet  |almustafa,', 'the ', 'chosen', 'and', 'the beloved,', 'who', 'was', 'a', 'dawn', 'unto', 'his', 'own day,', 'had', 'waited', 'twelve', 'years', 'in', 'the', 'city of', 'orphalese']\n",
+      "[['prophet', '', '|almustafa,'], ['the', ''], ['chosen'], ['and'], ['the', 'beloved,'], ['who'], ['was'], ['a'], ['dawn'], ['unto'], ['his'], ['own', 'day,'], ['had'], ['waited'], ['twelve'], ['years'], ['in'], ['the'], ['city', 'of'], ['orphalese']]\n",
+      "['prophet', '', '|almustafa,', 'the', '', 'chosen', 'and', 'the', 'beloved,', 'who', 'was', 'a', 'dawn', 'unto', 'his', 'own', 'day,', 'had', 'waited', 'twelve']\n",
+      "['prophet', '', 'almustafa', 'the', '', 'chosen', 'and', 'the', 'beloved', 'who', 'was', 'a', 'dawn', 'unto', 'his', 'own', 'day', 'had', 'waited', 'twelve']\n",
+      "['prophet', 'almustafa', 'the', 'chosen', 'and', 'the', 'beloved', 'who', 'was', 'a', 'dawn', 'unto', 'his', 'own', 'day', 'had', 'waited', 'twelve', 'years', 'in']\n",
+      "['prophet', 'almustafa', 'chosen', 'beloved', 'who', 'was', 'dawn', 'unto', 'his', 'own', 'day', 'had', 'waited', 'twelve', 'years', 'in', 'city', 'of', 'orphalese', 'for']\n"
      ]
     }
    ],
    "source": [
     "import re\n",
-    "prophet_reference_2 = list(map(lambda x: re.sub(\"{.+}|\\n\", \" \", x), prophet))\n",
-    "print(prophet_reference_2[:20])"
+    "\n",
+    "# CONVERTIRMOS EN MINÚSCULAS LA PALABRA\n",
+    "prophet_lower = list(map(lambda x: x.lower(), prophet))\n",
+    "\n",
+    "# SUSTITUIMOS \\n Y LAS REFERENCIAS POR ESPACIOS\n",
+    "prophet_reference_2 = list(map(lambda x: re.sub(\"{.+}|\\n\", \" \", x), prophet_lower))\n",
+    "print(prophet_reference_2[:20])\n",
+    "\n",
+    "# COMO HAY SALTOS DE LÍNEA DUPLICADOS Y REFERENCIAS ENTRE PALABRAS, HABRÁ ELEMENTOS QUE SON PALABRAS CON ESPACIOS.\n",
+    "# HACEMOS UN SPLIT Y TENDREMOS UNA LISTA DE LISTA (ALGUNOS ESPACIOS ESTARÁN VACÍOS)\n",
+    "prophet_line_2 = list(map(lambda x: x.split(\" \"), prophet_reference_2))\n",
+    "print(prophet_line_2[:20])\n",
+    "\n",
+    "# DESHACEMOS LA LISTA DE LISTAS\n",
+    "prophet_flat_2 = [i for e in prophet_line_2 for i in e]\n",
+    "print(prophet_flat_2[:20])\n",
+    "\n",
+    "# SUSTITUIMOS LOS SÍMBOLOS RAROS COMO PUNTOS, COMAS, |, ETC...\n",
+    "prophet_symbols = list(map(lambda x: re.sub(\"[^\\w]\", \"\", x), prophet_flat_2))\n",
+    "print(prophet_symbols[:20])\n",
+    "\n",
+    "# ELIMINAMOS LOS ELEMENTOS DE LA LISTA QUE ESTÁN VACÍOS\n",
+    "prophet_spaces = [e for e in prophet_symbols if not e == '']\n",
+    "print(prophet_spaces[:20])\n",
+    "\n",
+    "# APLICAMOS EL FILTRO PARA ELIMINAR word_list\n",
+    "prophet_filter_2 = list(filter(lambda x: False if x in word_list else True, prophet_spaces))\n",
+    "print(prophet_filter_2[:20])"
    ]
   },
   {
