--- a/module-1/lab-map-reduce-filter/your-code/main.ipynb
+++ b/module-1/lab-map-reduce-filter/your-code/main.ipynb
@@ -800,24 +800,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No       0.288682\n",
-      "year     0.000032\n",
-      "month    0.000079\n",
-      "day      0.000201\n",
-      "hour     0.000158\n",
-      "pm2.5    0.002204\n",
-      "DEWP     0.000329\n",
-      "TEMP     0.000278\n",
-      "PRES     0.000234\n",
-      "Iws      0.001141\n",
-      "Is       0.000017\n",
-      "Ir       0.000032\n",
+      "Iws    4.755223e-05\n",
+      "Is     7.227560e-07\n",
+      "Ir     1.345372e-06\n",
       "dtype: float64\n"
      ]
     }
    ],
    "source": [
-    "print(pm25._get_numeric_data().apply(lambda x: np.std(x, axis=0)/(x.count()-1)))"
+    "print(pm25_hourly.apply(lambda x: np.std(x, axis=0)/(x.count()-1)))"
    ]
   },
   {
