cambios finales lab

--- a/module-1/lab-map-reduce-filter/your-code/main.ipynb
+++ b/module-1/lab-map-reduce-filter/your-code/main.ipynb
@@ -655,97 +655,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
     "def sample_sd(x):\n",
-    "    deviation = np.std(x)\n",
-    "    return (deviation/x.value_counts()-1)"
+    "    return np.std(x)/(x.count()-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Iws</th>\n",
-       "      <th>Is</th>\n",
-       "      <th>Ir</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0.00</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-0.999983</td>\n",
-       "      <td>-0.999966</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0.45</th>\n",
-       "      <td>-0.891987</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0.89</th>\n",
-       "      <td>-0.992019</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0.90</th>\n",
-       "      <td>-0.218593</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1.00</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-0.988479</td>\n",
-       "      <td>-0.997324</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "           Iws        Is        Ir\n",
-       "0.00       NaN -0.999983 -0.999966\n",
-       "0.45 -0.891987       NaN       NaN\n",
-       "0.89 -0.992019       NaN       NaN\n",
-       "0.90 -0.218593       NaN       NaN\n",
-       "1.00       NaN -0.988479 -0.997324"
+       "Iws    4.754929e-05\n",
+       "Is     7.229519e-07\n",
+       "Ir     1.346183e-06\n",
+       "dtype: float64"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "deviation_final = pm25[['Iws', 'Is', 'Ir']].apply(sample_sd)\n",
+    "deviation_final = pm25_hourly.apply(sample_sd)\n",
     "deviation_final.head()"
    ]
   }
