--- a/module-1/lab-map-reduce-filter/your-code/main.ipynb
+++ b/module-1/lab-map-reduce-filter/your-code/main.ipynb
@@ -789,9 +789,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 136,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.37267799624996495"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def sample_sd(x):\n",
     "    '''\n",
@@ -803,17 +814,13 @@
     "    Output: 0.3726779962\n",
     "    '''\n",
     "    \n",
-    "    # Your code here:\n",
+    "    return np.std(x) / (x.count()-1)\n",
+    "\n",
+    "sample_sd(pd.Series([1,2,3,4]))\n",
+    "\n",
     "    \n",
     "    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
