--- a/module-1/lab-map-reduce-filter/your-code/main.ipynb
+++ b/module-1/lab-map-reduce-filter/your-code/main.ipynb
@@ -1236,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1266,12 +1266,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def word_filter(x):\n",
-    "    '''\n",
+    " '''\n",
     "    Input: A string\n",
     "    Output: true if the word is not in the specified list and false if the word is in the list\n",
     "        \n",
@@ -1284,11 +1294,13 @@
     "    Output: True\n",
     "    '''\n",
     "    \n",
-    "    word_list = ['and', 'the', 'a', 'an']\n",
-    "    \n",
-    "    # Your code here:\n",
-    "    \n",
-    "    "
+    "word_list = ['and', 'the', 'a', 'an']\n",
+    "\n",
+    "def word_filter(x):\n",
+    "    [i for i in x if i not in prophet_flat]\n",
+    "    return True\n",
+    "\n",
+    "word_filter(word_list)"
    ]
   },
   {
