--- a/module-1/lab-map-reduce-filter/your-code/main.ipynb
+++ b/module-1/lab-map-reduce-filter/your-code/main.ipynb
@@ -12,12 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [],
    "source": [
     "# import reduce from functools, numpy and pandas\n",
-    "\n"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import re\n",
+    "from functools import reduce\n",
+    "import statistics\n",
+    "from statistics import stdev"
    ]
   },
   {
@@ -33,15 +38,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 198,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(13637,)"
+      ]
+     },
+     "execution_count": 198,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Run this code:\n",
     "\n",
     "location = '../58585-0.txt'\n",
     "with open(location, 'r', encoding=\"utf8\") as f:\n",
-    "    prophet = f.read().split(' ')"
+    "    prophet = f.read().split(' ')\n",
+    "\n",
+    "np.shape(prophet)"
    ]
   },
   {
@@ -55,12 +73,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 199,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(13069,)"
+      ]
+     },
+     "execution_count": 199,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "del prophet[0:568]\n",
+    "np.shape(prophet)"
    ]
   },
   {
@@ -72,12 +103,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 200,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['PROPHET\\n\\n|Almustafa,',\n",
+       " 'the{7}',\n",
+       " 'chosen',\n",
+       " 'and',\n",
+       " 'the\\nbeloved,',\n",
+       " 'who',\n",
+       " 'was',\n",
+       " 'a',\n",
+       " 'dawn',\n",
+       " 'unto']"
+      ]
+     },
+     "execution_count": 200,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "prophet [:10]\n"
    ]
   },
   {
@@ -91,23 +142,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
     "def reference(x):\n",
+    "    \n",
+    "    res = re.sub('({\\d+})', '', x)\n",
+    "    return res\n",
     "    '''\n",
     "    Input: A string\n",
     "    Output: The string with references removed\n",
     "    \n",
-    "    Example:\n",
+    "    Example: ({\\d+})\n",
     "    Input: 'the{7}'\n",
     "    Output: 'the'\n",
     "    '''\n",
     "    \n",
     "    # Your code here:\n",
-    "    \n",
-    "    "
+    "     \n"
    ]
   },
   {
@@ -119,12 +172,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 202,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['PROPHET\\n\\n|Almustafa,',\n",
+       " 'the',\n",
+       " 'chosen',\n",
+       " 'and',\n",
+       " 'the\\nbeloved,',\n",
+       " 'who',\n",
+       " 'was',\n",
+       " 'a',\n",
+       " 'dawn',\n",
+       " 'unto']"
+      ]
+     },
+     "execution_count": 202,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "prophet_reference = list(map(reference, prophet))\n",
+    "prophet_reference[:10]"
    ]
   },
   {
@@ -136,11 +212,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
     "def line_break(x):\n",
+    "    mid = re.sub('(\\n)', ' ', x)\n",
+    "    res = mid.split()\n",
+    "    return res\n",
     "    '''\n",
     "    Input: A string\n",
     "    Output: A list of strings split on the line break (\\n) character\n",
@@ -164,12 +243,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 204,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['PROPHET', '|Almustafa,'],\n",
+       " ['the'],\n",
+       " ['chosen'],\n",
+       " ['and'],\n",
+       " ['the', 'beloved,'],\n",
+       " ['who'],\n",
+       " ['was'],\n",
+       " ['a'],\n",
+       " ['dawn'],\n",
+       " ['unto']]"
+      ]
+     },
+     "execution_count": 204,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "prophet_line = list(map(line_break, prophet_reference))\n",
+    "prophet_line[:10]\n"
    ]
   },
   {
@@ -181,12 +281,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 205,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['PROPHET',\n",
+       " '|Almustafa,',\n",
+       " 'the',\n",
+       " 'chosen',\n",
+       " 'and',\n",
+       " 'the',\n",
+       " 'beloved,',\n",
+       " 'who',\n",
+       " 'was',\n",
+       " 'a']"
+      ]
+     },
+     "execution_count": 205,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "prophet_flat = [f for e in prophet_line for f in e]\n",
+    "prophet_flat[:10]"
    ]
   },
   {
@@ -200,9 +322,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 206,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['PROPHET',\n",
+       " '|Almustafa,',\n",
+       " 'chosen',\n",
+       " 'beloved,',\n",
+       " 'who',\n",
+       " 'was',\n",
+       " 'dawn',\n",
+       " 'unto',\n",
+       " 'his',\n",
+       " 'own']"
+      ]
+     },
+     "execution_count": 206,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def word_filter(x):\n",
     "    '''\n",
@@ -213,7 +355,6 @@
     "    word list = ['and', 'the']\n",
     "    Input: 'and'\n",
     "    Output: False\n",
-    "    \n",
     "    Input: 'John'\n",
     "    Output: True\n",
     "    '''\n",
@@ -221,8 +362,13 @@
     "    word_list = ['and', 'the', 'a', 'an']\n",
     "    \n",
     "    # Your code here:\n",
-    "    \n",
-    "    "
+    "    if x in word_list:\n",
+    "        return False\n",
+    "    else:\n",
+    "        return True\n",
+    "\n",
+    "prophet_filter = list(filter(word_filter,prophet_flat))\n",
+    "prophet_filter[0:10]"
    ]
   },
   {
@@ -243,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,8 +398,12 @@
     "    word_list = ['and', 'the', 'a', 'an']\n",
     "    \n",
     "    # Your code here:\n",
-    "    \n",
-    "    "
+    "    y = [map(str.lower,x)]\n",
+    "    if y in word_list:\n",
+    "        return False\n",
+    "    else:\n",
+    "        return True\n",
+    "   "
    ]
   },
   {
@@ -269,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +434,7 @@
     "    '''\n",
     "    \n",
     "    # Your code here:\n",
-    "    "
+    "    return a + \" \" + b"
    ]
   },
   {
@@ -296,12 +446,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 213,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PROPHET |Almustafa, chosen beloved, who was dawn unto his own day, had waited twelve years in city of Orphales\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "prophet_string = reduce(concat_space, prophet_filter)\n",
+    "print(prophet_string[0:110])"
    ]
   },
   {
@@ -317,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,12 +497,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 218,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.frame.DataFrame"
+      ]
+     },
+     "execution_count": 218,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "pm25.head()\n",
+    "type(pm25)"
    ]
   },
   {
@@ -355,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +541,8 @@
     "    '''\n",
     "    \n",
     "    # Your code here:\n",
-    "    "
+    "    rs = float(x)/24\n",
+    "    return rs"
    ]
   },
   {
@@ -382,12 +554,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 222,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Iws</th>\n",
+       "      <th>Is</th>\n",
+       "      <th>Ir</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.074583</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.205000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.279583</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.410000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.540417</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Iws   Is   Ir\n",
+       "0  0.074583  0.0  0.0\n",
+       "1  0.205000  0.0  0.0\n",
+       "2  0.279583  0.0  0.0\n",
+       "3  0.410000  0.0  0.0\n",
+       "4  0.540417  0.0  0.0"
+      ]
+     },
+     "execution_count": 222,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "pm25_hourly = pd.DataFrame()\n",
+    "\n",
+    "pm25_hourly['Iws'] = pm25['Iws'].apply(hourly)\n",
+    "pm25_hourly['Is'] = pm25['Is'].apply(hourly)\n",
+    "pm25_hourly['Ir'] = pm25['Ir'].apply(hourly)\n",
+    "\n",
+    "pm25_hourly.head()"
    ]
   },
   {
@@ -401,9 +654,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 237,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50.01063466523069"
+      ]
+     },
+     "execution_count": 237,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def sample_sd(x):\n",
     "    '''\n",
@@ -416,8 +680,8 @@
     "    '''\n",
     "    \n",
     "    # Your code here:\n",
-    "    \n",
-    "    "
+    "    return statistics.stdev(x)\n",
+    "sample_sd(pm25['Iws'])    \n"
    ]
   },
   {
@@ -444,7 +708,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
