--- a/module-1/lab-api-scavenger-game/your-code/Scavenger.ipynb
+++ b/module-1/lab-api-scavenger-game/your-code/Scavenger.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,27 +13,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '..token.txt'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-34854b003ece>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m\"..token.txt\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"r\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mmyfile\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0macceso\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmyfile\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreadlines\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mkey\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0macceso\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0muser\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0maiborra11\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '..token.txt'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Python', 'HTML', 'Jupyter Notebook'}\n"
      ]
     }
    ],
    "source": [
-    "with open (\".token.txt\", \"r\") as myfile:\n",
+    "with open(\"../token.txt\", \"r\") as myfile:\n",
     "    acceso = myfile.readlines()\n",
     "    \n",
-    "key = acceso\n",
-    "user = aiborra11"
+    "key = acceso[0]\n",
+    "user = 'aiborra11'\n",
+    "\n",
+    "repo = 'ironhack-datalabs/madrid-oct-2018'\n",
+    "get_forks = 'http://api.github.com/repos/'+ repo +'/forks'\n",
+    "\n",
+    "res_fork = requests.get(get_forks, auth=(user, key))\n",
+    "results_fork = res_fork.json()\n",
+    "\n",
+    "languages = set()\n",
+    "for i in range(len(results_fork)):\n",
+    "    languages.add(results_fork[i]['language'])\n",
+    "\n",
+    "print(languages)\n"
    ]
   },
   {
