Challenge 1&2 Final Version

--- a/module-1/lab-api-scavenger-game/your-code/Challenge-1.ipynb
+++ b/module-1/lab-api-scavenger-game/your-code/Challenge-1.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Python', 'HTML', 'Jupyter Notebook'}\n"
+      "{'Jupyter Notebook', 'HTML', 'Python'}\n"
      ]
     }
    ],
@@ -25,17 +25,12 @@
     "\n",
     "key = os.environ[\"Token\"]\n",
     "\n",
-    "forks = 'http://api.github.com/repos/ironhack-datalabs/madrid-oct-2018/forks'\n",
+    "forks = 'http://api.github.com/repos/ironhack-datalabs/madrid-oct-2018/{}'.format()\n",
     "\n",
-    "res = requests.get(forks, auth=('Pela12345', key))\n",
+    "res = requests.get({}, auth=('Pela12345', key))\n",
     "res_final = res.json()\n",
     "\n",
-    "lang_list=[]\n",
-    "for i in res_final:\n",
-    "    lang_list.append(i.get('language'))\n",
     "\n",
-    "print(set(lang_list))\n",
-    "    \n",
     "\n",
     "    \n",
     "\n",
