--- a/module-1/lab-api-scavenger-game/your-code/Challenge-3.ipynb
+++ b/module-1/lab-api-scavenger-game/your-code/Challenge-3.ipynb
@@ -5,7 +5,29 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# enter your code below\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()\n",
+    "import requests\n",
+    "import json\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "\n",
+    "\n",
+    "key = os.environ[\"Token\"]\n",
+    "\n",
+    "forks = 'http://api.github.com/repos/ironhack-datalabs/madrid-oct-2018/forks'\n",
+    "\n",
+    "res = requests.get(forks, auth=('Pela12345', key))\n",
+    "res_final = res.json()\n",
+    "\n",
+    "lang_list=[]\n",
+    "for i in res_final:\n",
+    "    lang_list.append(i.get('language'))\n",
+    "\n",
+    "print(set(lang_list))"
+   ]
   }
  ],
  "metadata": {
