--- a/module-1/lab-api-scavenger-game/your-code/Challenge 2.ipynb
+++ b/module-1/lab-api-scavenger-game/your-code/Challenge 2.ipynb
@@ -2,7 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import requests\n",
+    "\n",
+    "with open (\"../token.txt\", \"r\") as myfile:\n",
+    "    acceso = myfile.readlines()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "key = acceso[0]\n",
+    "user = \"roskor97\"\n",
+    "\n",
+    "repo = 'ironhack-datalabs/datamad0619'\n",
+    "inicio = '2019-06-19'\n",
+    "final = '2019-06-25'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -14,20 +42,7 @@
     }
    ],
    "source": [
-    "import json\n",
-    "import requests\n",
-    "\n",
-    "with open (\"../token.txt\", \"r\") as myfile:\n",
-    "    acceso = myfile.readlines()\n",
-    "\n",
-    "key = acceso[0]\n",
-    "user = \"roskor97\"\n",
-    "\n",
-    "repo = 'ironhack-datalabs/datamad0619'\n",
-    "desde = '2019-06-19'\n",
-    "hasta = '2019-06-25'\n",
-    "\n",
-    "get_commits = 'http://api.github.com/repos/{}/commits?since={}&until={}'.format(repo, desde, hasta)\n",
+    "get_commits = 'http://api.github.com/repos/{}/commits?since={}&until={}'.format(repo, inicio, final)\n",
     "\n",
     "res_commit = requests.get(get_commits, auth=(user, key))\n",
     "results_commit = res_commit.json()\n",
@@ -38,6 +53,13 @@
     "\n",
     "print(len(commits))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
