--- a/module-1/lab-api-scavenger-game/your-code/Challenge2.ipynb
+++ b/module-1/lab-api-scavenger-game/your-code/Challenge2.ipynb
@@ -7,42 +7,50 @@
    "outputs": [],
    "source": [
     "import json\n",
-    "import requests\n",
-    "import pandas as pd\n"
+    "import requests"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Python', 'HTML', 'Jupyter Notebook'}\n"
+      "0\n"
      ]
     }
    ],
    "source": [
-    "with open(\"../token.txt\", \"r\") as myfile:\n",
-    "    acceso = myfile.readlines()\n",
-    "    \n",
-    "key = acceso[0]\n",
+    "with open ('../token.txt', 'r') as myfile:\n",
+    "    access = myfile.readlines()\n",
+    "\n",
+    "key = access[0]\n",
     "user = 'aiborra11'\n",
     "\n",
-    "repo = 'ironhack-datalabs/madrid-oct-2018'\n",
-    "get_forks = 'http://api.github.com/repos/'+ repo +'/forks'\n",
+    "get_commits = 'http://api.github.com/repos/ironhack-datalabs/datamad0619/commits?since=2019-06-23T00:00:00Z&until=2019-06-26T00:00:00Z'\n",
     "\n",
-    "res_fork = requests.get(get_forks, auth=(user, key))\n",
-    "results_fork = res_fork.json()\n",
+    "res_commit = requests.get(get_commits, auth=(user, key))\n",
+    "results_commit= res_commit.json()\n",
     "\n",
-    "languages = set()\n",
-    "for i in range(len(results_fork)):\n",
-    "    languages.add(results_fork[i]['language'])\n",
+    "commits = 0\n",
+    "for i in results_commit:\n",
+    "    if 'committer' in results_commit:\n",
+    "        commits += 1\n",
     "\n",
-    "print(languages)\n"
+    "\n",
+    "print(commits)\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
