--- a/module-1/lab-api-scavenger-game/Challenge-2.ipynb
+++ b/module-1/lab-api-scavenger-game/Challenge-2.ipynb
@@ -91,7 +91,7 @@
     "answer = r.get(url, params = query_params)\n",
     "result = len(answer.json())\n",
     "\n",
-    "result"
+    "result #commits since May, 18th"
    ]
   },
   {
