challenge 3 empezado, hice cosillas

--- a/module-1/lab-api-scavenger-game/Challenge_3.ipynb
+++ b/module-1/lab-api-scavenger-game/Challenge_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,7 @@
        "   'html': 'https://github.com/ironhack-datalabs/scavenger/tree/master/98750'}}]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,8 +346,60 @@
     "repo = 'ironhack-datalabs/scavenger'\n",
     "get_repo = \"https://api.github.com/repos/{}/contents\".format(repo)\n",
     "res_repo = requests.get(get_repo, auth=(user,key))\n",
-    "results_fork = res_repo.json()\n",
-    "results_fork"
+    "results_scavenger = res_repo.json()\n",
+    "results_scavenger\n",
+    "\n",
+    "#Primero busco en contents y miro el type de los contenidos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['.gitignore', '15024', '15534', '17020', '30351', '40303', '44639', '45525', '47222', '47830', '49418', '50896', '55417', '55685', '60224', '64880', '66032', '68848', '70751', '70985', '88596', '89046', '89338', '91701', '97881', '98750']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def diccionario(resultado):\n",
+    "    lista_diccionario = []\n",
+    "    for i in range(len(results_scavenger)):\n",
+    "        lista_diccionario.append(results_scavenger[i]['path'])\n",
+    "    return lista_diccionario\n",
+    "\n",
+    "lista_diccionario = diccionario(results_scavenger)\n",
+    "print(lista_diccionario)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['15024', '15534', '17020', '30351', '40303', '44639', '45525', '47222', '47830', '49418', '50896', '55417', '55685', '60224', '64880', '66032', '68848', '70751', '70985', '88596', '89046', '89338', '91701', '97881', '98750']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def removeIgnore(lista):\n",
+    "    for e in lista:\n",
+    "        if e =='.gitignore':\n",
+    "            lista.remove(e)\n",
+    "        return lista\n",
+    "\n",
+    "lista = removeIgnore(lista_diccionario)\n",
+    "print(lista)\n",
+    "\n",
+    "#Esto es lo máximo que he conseguido. Una lista con las rutas pero no sé cómo seguir."
    ]
   }
  ],
